# copier-modern-ml

./: .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  RELEASE.md  cliff.toml  cookiecutter.json  copier.yml  extensions.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish-release.yml
project/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.md.jinja  Dockerfile.package.jinja  Dockerfile.source  Dockerfile.source.jinja  Makefile.jinja  README.md.jinja  cliff.toml  cliff.toml.jinja  docker-compose.yml.jinja  docker-entrypoint.sh  mkdocs.yml.jinja  pyproject.toml.jinja  {% if ci == 'gitlab' %}.gitlab-ci.yml{% endif %}.jinja
project/docs/: getting-started.md.jinja  index.md.jinja  overview.md.jinja
project/scripts/: gen_ref_pages.py  make  release.sh  start_server.py.jinja
project/src/tests/: test_{{ project_slug }}.py.jinja
project/src/{{ project_slug }}/: __init__.py.jinja  app.py.jinja  cli.py.jinja  nlp.py  tabular.py  vision.py  {% if create_examples %}app.py{% endif %}.jinja  {% if create_examples %}nlp.py{% endif %}.jinja  {% if create_examples %}tabular.py{% endif %}.jinja  {% if create_examples %}vision.py{% endif %}.jinja
project/src/{{ project_slug }}/api/: __init__.py  settings.py.jinja
project/src/{{ project_slug }}/api/routes/: health.py.jinja  predict.py.jinja
project/src/{{ project_slug }}/{% if create_examples %}api{% endif %}/routes/: predict.py.jinja
project/tests/: conftest.py.jinja  test_version.py.jinja  {% if create_examples %}conftest.py{% endif %}.jinja  {% if create_examples %}test_nlp.py{% endif %}.jinja  {% if create_examples %}test_tabular.py{% endif %}.jinja  {% if create_examples %}test_vision.py{% endif %}.jinja
project/tests/api/: test_app.py.jinja  test_health.py.jinja  test_predict.py.jinja  test_settings.py.jinja
project/tests/{% if create_examples %}api{% endif %}/: test_app.py.jinja  test_health.py.jinja
project/{% if ci == 'github' %}.github{% endif %}/ISSUE_TEMPLATE/: feature_request.md
project/{% if ci == 'github' %}.github{% endif %}/workflows/: ci.yml  publish-release.yml
scripts/: gen_ref_pages.py  release.sh
tests/: helpers.ps1  helpers.sh  reset_history.sh  test_cookiecutter_template.py  test_project.ps1  test_project.sh
{{ cookiecutter.project_slug }}/: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: pytest.yml
{{ cookiecutter.project_slug }}/src/tests/: test_{{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py
