[project]
name = "copier-modern-ml"
version = "0.1.0"
description = "Personal Python machine learning project template with modern workflows made by copier"
readme = "README.md"
authors = [
    {name="Jongsu Liam Kim", email="jongsukim8@gmail.com"}
]
dependencies = [
    "copier",
    "copier-templates-extensions",
    "jinja2",
    "typer",
]
requires-python = ">=3.11, <4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest",
]

[tool.hatch.metadata]
allow-direct-references = true
