[project]
name = "copier-modern-ml"
version = "0.9.2"
description = "Personal Python machine learning project template with modern workflows made by copier"
readme = "README.md"
authors = [
    {name="Jongsu Liam Kim", email="jongsukim8@gmail.com"}
]
dependencies = [
    "copier",
    "copier-templates-extensions",
    "jinja2",
    "typer",
    "git-cliff>=2.8.0",
]
requires-python = ">=3.12, <4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
managed = true
dev-dependencies = [
    "pre-commit",
    "pytest",
    "git-cliff",
]

[tool.ruff.format]
quote-style = "single"

[tool.hatch.metadata]
allow-direct-references = true

[tool.git-changelog]
bump = "minor"
convention = "conventional"
in-place = false
filter-commits = "0.1.0.."
marker-line = "<!-- insertion marker -->"
output = "output.log"
parse-refs = false
parse-trailers = false
provider = "github"
repository = "."
sections = "fix,maint"
template = "keepachangelog"
version-regex = "^## \\\\[(?P<version>v?[^\\\\]]+)"
versioning = "semver"
zerover = true
